<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">BiblioFinder</string>

    <string name="account">Account</string>
    <string name="adapted_for_disabilities">Adapted for disabilities</string>
    <string name="address">Address</string>
    <string name="already_have_booking">You\'ve already made a booking</string>
    <string name="available">AVAILABLE</string>
    <string name="book_button_description">Make a booking</string>
    <string name="booked">BOOKED</string>
    <string name="booked_nfc_button_description">Scan NFC to confirm the booking</string>
    <string name="booking_icon">Booking icon</string>
    <string name="booking_notification">Booking notification</string>
    <string name="booking_outside_allowed_hours">Booking cannot be made outside of allowed hours</string>
    <string name="by_institution">By institution</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button_description">Cancel booking</string>
    <string name="capacity">Capacity</string>
    <string name="classroom_banner">Classroom banner</string>
    <string name="classroom_map">Classroom map</string>
    <string name="classrooms">Classrooms</string>
    <string name="closing_time">Closing time</string>
    <string name="create_one_now"><u>Create one now!</u></string>
    <string name="current_booking">Current booking</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="email_already_in_use">This email is already in use</string>
    <string name="empty_credentials">Please enter both email and password.</string>
    <string name="empty_nfc_button_description">Scan NFC to occupy the workstation</string>
    <string name="enable_nfc">To use this application, you must enable NFC on your device.</string>
    <string name="free_spaces">Free spaces</string>
    <string name="free_spaces_format">Free spaces: %1$d / %2$d</string>
    <string name="full_name">Full name</string>
    <string name="institution">Institution</string>
    <string name="invalid_credentials">Incorrect email or password</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="invalid_password">Password must have at least 12 characters including uppercase, lowercase, and numbers</string>
    <string name="is_adapted">Is adapted</string>
    <string name="leave_button_description">Leave actual workstation</string>
    <string name="libraries">Libraries</string>
    <string name="library_banner">Library banner</string>
    <string name="library_info">Library information</string>
    <string name="log_in">Log in</string>
    <string name="log_in_successful">You\'ve been successfully logged in</string>
    <string name="log_out">Log out</string>
    <string name="must_be_logged_in">You must be logged in to make a booking</string>
    <string name="name_ascending">Name (ascending)</string>
    <string name="name_descending">Name (descending)</string>
    <string name="nfc_disabled">NFC disabled</string>
    <string name="no_bookings_or_occupancy">No bookings or occupancy</string>
    <string name="no_cancel_booking">No, cancel booking</string>
    <string name="occupied">OCCUPIED</string>
    <string name="occupied_site">Occupied site</string>
    <string name="opening_time">Opening time</string>
    <string name="or">Or</string>
    <string name="order_by">Order by:</string>
    <string name="password">Password</string>
    <string name="password_mismatch">Password mismatch. Please make sure your passwords match.</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="please_enter_email_password">Please enter your email and password</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile picture: User avatar</string>
    <string name="registration_successful">Registration successful. Welcome!</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="save_changes">Save changes</string>
    <string name="scan_nfc_tag">Scan an NFC tag to continue</string>
    <string name="schedule_format">Schedule: %s - %s</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="unsupported_nfc_device">This device does not support NFC</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome!</string>
    <string name="workstation">Workstation %d</string>
    <string name="workstation_already_occupied_booked">This site is already occupied or previously booked</string>
    <string name="workstation_icon">Workstation icon</string>
    <string name="workstation_not_occupied">Workstation is currently booked or occupied by another user</string>
    <string name="workstation_occupied">Workstation occupied successfully</string>
    <string name="workstation_successfully_booked_for_at">Workstation successfully booked for %1$s at %2$s</string>
    <string name="workstations">Workstations</string>
    <string name="yes">Yes</string>
    <string name="you_have_a_booking_will_you_attend">You have a booking, will you attend?</string>
</resources>