<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/textRepeatPassword"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:autofillHints="password"
            android:hint="@string/repeat_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/sign_up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>